--- a/Client/src/Components/Home/Banner/Banner.scss
+++ b/Client/src/Components/Home/Banner/Banner.scss
@@ -1,9 +1,10 @@
 @import '../../../css-config/mixins.scss';
 .hero-banner {
-    padding: 40px 0;
+    padding: 40px 0px;
     position: relative;
     background-image: linear-gradient(to right, #8e2de2, #4a00e0);
-    @include md {
+    @include lg {
+        padding: 10px 0px;
         height: calc(100vh - 80px);
     }
     .content {
@@ -20,17 +21,13 @@
             max-width: 1200px;
         }
         img {
-            position: relative;
-            z-index: 9;
             width: 200px;
-            margin-bottom: 20px;
+            object-fit: contain;
             @include lg {
+                height: 100%;
                 width: 400px;
-                margin-top: 50px;
-                margin-right: 60px;
-                margin-bottom: 30px;
             }
-            @include xxl {
+            @include xl {
                 width: 600px;
                 margin-right: 0;
                 margin-top: 0;
@@ -42,7 +39,7 @@
             text-align: center;
             align-items: center;
             color: white;
-            @include md {
+            @include lg {
                 position: absolute;
                 left: 50px;
                 top: 50%;
@@ -56,7 +53,7 @@
                 font-weight: 700;
                 line-height: 1;
                 margin-bottom: 20px;
-                @include md {
+                @include lg {
                     font-size: 180px;
                 }
             }
@@ -65,7 +62,7 @@
                 font-size: 14px;
                 line-height: 20px;
                 margin-bottom: 20px;
-                @include md {
+                @include lg {
                     max-width: 500px;
                     font-size: 18px;
                     line-height: 24px;
