--- a/Client/src/Components/Cart/Cartitem/Cartitem.scss
+++ b/Client/src/Components/Cart/Cartitem/Cartitem.scss
@@ -19,6 +19,7 @@
     .right {
         overflow: hidden;
         position: relative;
+        width: 100%;
         .name {
             white-space: nowrap;
             text-overflow: ellipsis;
