--- a/Client/src/Components/Products/SingleProduct/SingleProduct.scss
+++ b/Client/src/Components/Products/SingleProduct/SingleProduct.scss
@@ -86,6 +86,7 @@
                             gap: 10px;
                             justify-content: center;
                             align-items: center;
+                            cursor: pointer;
                         }
                     }
                 }
