migrated to postgree & cloudinary connected

--- a/Client/src/Components/Header/header.css
+++ b/Client/src/Components/Header/header.css
@@ -40,6 +40,9 @@
   cursor: pointer;
   font-size: 14px;
 }
+.main-header .header-content .left li:hover {
+  color: #8e2de2;
+}
 .main-header .header-content .title {
   font-size: 22px;
   cursor: pointer;
