--- a/Client/src/Components/Home/home.css
+++ b/Client/src/Components/Home/home.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=home.css.map */
+.main-content {
+  max-width: calc(100% - 20px);
+  margin: 0 auto;
+}
+@media only screen and (min-width: 1024px) {
+  .main-content {
+    max-width: 1200px;
+  }
+}/*# sourceMappingURL=home.css.map */
